feat:添加当前学期判断
