# common/api/gen/proto/content/v1/content_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-grpc v1.5.1
-// - protoc             v3.19.4
+// - protoc             v4.25.3
 // source: content/v1/content.proto
 
 package contentv1
@@ -36,6 +36,8 @@ const (
 	ContentService_DelWebsite_FullMethodName        = "/content.v1.ContentService/DelWebsite"
 	ContentService_GetUpdateVersion_FullMethodName  = "/content.v1.ContentService/GetUpdateVersion"
 	ContentService_SaveUpdateVersion_FullMethodName = "/content.v1.ContentService/SaveUpdateVersion"
+	ContentService_GetSemester_FullMethodName       = "/content.v1.ContentService/GetSemester"
+	ContentService_SaveSemester_FullMethodName      = "/content.v1.ContentService/SaveSemester"
 )
 
 // ContentServiceClient is the client API for ContentService service.
@@ -65,6 +67,9 @@ type ContentServiceClient interface {
 	// 热更新版本
 	GetUpdateVersion(ctx context.Context, in *GetUpdateVersionRequest, opts ...grpc.CallOption) (*GetUpdateVersionResponse, error)
 	SaveUpdateVersion(ctx context.Context, in *SaveUpdateVersionRequest, opts ...grpc.CallOption) (*SaveUpdateVersionResponse, error)
+	//学期
+	GetSemester(ctx context.Context, in *GetSemesterRequest, opts ...grpc.CallOption) (*GetSemesterResponse, error)
+	SaveSemester(ctx context.Context, in *SaveSemesterRequest, opts ...grpc.CallOption) (*SaveSemesterResponse, error)
 }
 
 type contentServiceClient struct {
@@ -245,6 +250,26 @@ func (c *contentServiceClient) SaveUpdateVersion(ctx context.Context, in *SaveUp
 	return out, nil
 }
 
+func (c *contentServiceClient) GetSemester(ctx context.Context, in *GetSemesterRequest, opts ...grpc.CallOption) (*GetSemesterResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetSemesterResponse)
+	err := c.cc.Invoke(ctx, ContentService_GetSemester_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *contentServiceClient) SaveSemester(ctx context.Context, in *SaveSemesterRequest, opts ...grpc.CallOption) (*SaveSemesterResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(SaveSemesterResponse)
+	err := c.cc.Invoke(ctx, ContentService_SaveSemester_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // ContentServiceServer is the server API for ContentService service.
 // All implementations must embed UnimplementedContentServiceServer
 // for forward compatibility.
@@ -272,6 +297,9 @@ type ContentServiceServer interface {
 	// 热更新版本
 	GetUpdateVersion(context.Context, *GetUpdateVersionRequest) (*GetUpdateVersionResponse, error)
 	SaveUpdateVersion(context.Context, *SaveUpdateVersionRequest) (*SaveUpdateVersionResponse, error)
+	//学期
+	GetSemester(context.Context, *GetSemesterRequest) (*GetSemesterResponse, error)
+	SaveSemester(context.Context, *SaveSemesterRequest) (*SaveSemesterResponse, error)
 	mustEmbedUnimplementedContentServiceServer()
 }
 
@@ -332,6 +360,12 @@ func (UnimplementedContentServiceServer) GetUpdateVersion(context.Context, *GetU
 }
 func (UnimplementedContentServiceServer) SaveUpdateVersion(context.Context, *SaveUpdateVersionRequest) (*SaveUpdateVersionResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method SaveUpdateVersion not implemented")
+}
+func (UnimplementedContentServiceServer) GetSemester(context.Context, *GetSemesterRequest) (*GetSemesterResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetSemester not implemented")
+}
+func (UnimplementedContentServiceServer) SaveSemester(context.Context, *SaveSemesterRequest) (*SaveSemesterResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method SaveSemester not implemented")
 }
 func (UnimplementedContentServiceServer) mustEmbedUnimplementedContentServiceServer() {}
 func (UnimplementedContentServiceServer) testEmbeddedByValue()                        {}
@@ -660,6 +694,42 @@ func _ContentService_SaveUpdateVersion_Handler(srv interface{}, ctx context.Cont
 	return interceptor(ctx, in, info, handler)
 }
 
+func _ContentService_GetSemester_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetSemesterRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ContentServiceServer).GetSemester(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ContentService_GetSemester_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ContentServiceServer).GetSemester(ctx, req.(*GetSemesterRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ContentService_SaveSemester_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(SaveSemesterRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ContentServiceServer).SaveSemester(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ContentService_SaveSemester_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ContentServiceServer).SaveSemester(ctx, req.(*SaveSemesterRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // ContentService_ServiceDesc is the grpc.ServiceDesc for ContentService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -734,6 +804,14 @@ var ContentService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "SaveUpdateVersion",
 			Handler:    _ContentService_SaveUpdateVersion_Handler,
+		},
+		{
+			MethodName: "GetSemester",
+			Handler:    _ContentService_GetSemester_Handler,
+		},
+		{
+			MethodName: "SaveSemester",
+			Handler:    _ContentService_SaveSemester_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
